# slowql

./: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  test.sql  test_integration.py
.github/workflows/: ci.yml
docs/: source-anchoring-plan.md
src/slowql/analyzers/compliance/: __init__.py
src/slowql/analyzers/cost/: __init__.py
src/slowql/analyzers/performance/: __init__.py
src/slowql/analyzers/quality/: __init__.py
src/slowql/analyzers/reliability/: __init__.py
src/slowql/analyzers/security/: __init__.py
src/slowql/cli/: app.py
src/slowql/core/: config.py  models.py
src/slowql/parser/: source_splitter.py  universal.py
src/slowql/reporters/: github_actions_reporter.py
src/slowql/rules/: catalog.py
src/slowql/rules/compliance/: __init__.py  gdpr.py  general.py  hipaa.py  pci_dss.py  sox.py
src/slowql/rules/cost/: __init__.py  compute.py  cross_region.py  indexing.py  lifecycle.py  pagination.py  storage.py
src/slowql/rules/performance/: __init__.py  aggregation.py  batching.py  cursors.py  execution.py  hints.py  indexing.py  locking.py  memory.py  network.py  scanning.py
src/slowql/rules/quality/: __init__.py  complexity.py  documentation.py  modern_sql.py  naming.py  schema_design.py  style.py  technical_debt.py  testing.py
src/slowql/rules/reliability/: __init__.py  data_safety.py  foreign_keys.py  timeouts.py  transactions.py
src/slowql/rules/security/: __init__.py  authentication.py  authorization.py  command.py  configuration.py  cryptography.py  dos.py  injection.py  logging.py  session.py
tests/: verify_integration.py
tests/unit/: test_analyzer_cost_coverage.py  test_analyzers.py  test_cli_autofix.py  test_github_actions_reporter.py  test_parser_source_mapping.py  test_parser_universal_extra.py  test_rules.py
