# slowql/pyproject.toml

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "slowql"
version = "1.5.0"
description = "Next-generation SQL analyzer: Security, Performance, Compliance, Cost optimization"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "makroumi", email = "contact@makroumi.dev" }]
maintainers = [{ name = "makroumi", email = "contact@makroumi.dev" }]
keywords = [
    "sql",
    "analyzer",
    "linter",
    "security",
    "performance",
    "database",
    "postgresql",
    "mysql",
    "optimization",
    "static-analysis",
    "compliance",
    "gdpr",
    "hipaa",
    "pci-dss",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "sqlglot>=23.0.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
# Used by CI (your workflow does: pip install -e .[test])
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pandas>=2.0.0",
]

# Local development convenience (superset of test + tooling)
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pandas>=2.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

interactive = [
    "readchar>=4.0.0",
]

all = ["slowql[dev,docs,interactive]"]

[project.urls]
Homepage = "https://github.com/makroumi/slowql"
Documentation = "https://slowql.dev/docs"
Repository = "https://github.com/makroumi/slowql"
Issues = "https://github.com/makroumi/slowql/issues"
Changelog = "https://github.com/makroumi/slowql/blob/main/CHANGELOG.md"

[project.scripts]
slowql = "slowql.cli.app:main"

[project.entry-points."slowql.analyzers"]
security = "slowql.analyzers.security:SecurityAnalyzer"
performance = "slowql.analyzers.performance:PerformanceAnalyzer"
reliability = "slowql.analyzers.reliability:ReliabilityAnalyzer"
compliance = "slowql.analyzers.compliance:ComplianceAnalyzer"
cost = "slowql.analyzers.cost:CostAnalyzer"
quality = "slowql.analyzers.quality:QualityAnalyzer"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/slowql"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "E501",     # line too long (handled by formatter)
    "RUF012",   # mutable class default (false positives with Pydantic)
    "SIM105",   # use contextlib.suppress (style preference)
    "ARG002",   # unused method argument (often intentional in overrides)
    "SIM102",   # collapsible if (reduces readability)
    "SIM108",   # ternary operator (style preference)
    "C401",     # unnecessary generator (minor optimization)
    "B007",     # unused loop variable (intentional in some cases)
    "UP042",    # StrEnum inheritance (keep str,Enum for Python 3.10 compat)
    "PLW0108",  # unnecessary lambda (needed for factory pattern in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["slowql"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sqlglot.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "slowql.rules.catalog",
    "slowql.rules.quality.schema_design"
]
# sqlglot's find_all type signature doesn't support tuple types properly
disable_error_code = ["var-annotated", "arg-type"]

[[tool.mypy.overrides]]
module = ["readchar.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/slowql"]
branch = true
parallel = true
omit = [
    "src/slowql/rules/security/*.py",
    "src/slowql/rules/performance/*.py",
    "src/slowql/rules/cost/*.py",
    "src/slowql/rules/reliability/*.py",
    "src/slowql/rules/compliance/*.py",
    "src/slowql/rules/quality/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pragma: no cover",
    "def __repr__",
]

[tool.ruff.lint.per-file-ignores]
# Allow star imports and redefined names in __init__.py files (re-exports)
"*/__init__.py" = ["F403", "F405", "F811", "PLC0415"]
# Allow test-specific patterns
"tests/**/*.py" = ["PLC0415", "E402"]
# Allow lazy imports in registry pattern
"src/slowql/rules/registry.py" = ["PLC0415"]
